--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,12 +19,28 @@ a {
   box-sizing: border-box;
 }
 
+#article-content h2 {
+  @apply text-4xl font-bold mt-8 mb-4;
+}
+#article-content h3 {
+  @apply text-3xl font-bold mt-8 mb-4;
+}
+#article-content h4 {
+  @apply text-2xl font-bold mt-8 mb-4;
+}
+#article-content ul {
+  @apply list-disc ml-8 mt-5;
+}
+#article-content img {
+  @apply mx-auto mt-8;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
   body {
     color: white;
-    background: black;
+    background: #0f172a;
   }
 }
